@@ -2,6 +2,8 @@
 
 	* testsuite/ecc-add-test.c (test_main): Reduce test duplication.
 	Use ecc->add_hhh_itch.
+	* testsuite/ecc-dup-test.c (test_main): Reduce test duplication.
+	Use ecc->dup_itch.
 
 2017-09-23  Daiki Ueno  <dueno@redhat.com>
 
